# kur__4

./: README.md  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
src/api/: hh_api.py  vacancy_api.py
src/storage/: json_vacancy_storage.py  vacancy_storage.py
src/utils/: filter_vacancies.py  get_top_vacancies.py  get_vacancies_by_salary.py  sort_vacancies.py
src/vacancy/: vacancy.py
tests/: test_all.py
